# nanotorch

./: .gitignore  README.md  pyproject.toml
examples/: scalar_mlp_demo.py
src/nanotorch/: value.py
src/nanotorch/nn/: activation.py  layer.py  mlp.py  module.py  neuron.py
src/nanotorch/optim/: sgd.py
tests/: test_layer.py  test_mlp.py  test_module.py  test_neuron.py  test_value_autograd.py
